--- a/NetCleanArchMvc.WebUI/NetCleanArchMvc.WebUI.csproj
+++ b/NetCleanArchMvc.WebUI/NetCleanArchMvc.WebUI.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetCleanArchMvc.Infra.IoC\NetCleanArchMvc.Infra.IoC.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
