--- a/NetCleanArchMvc.Application/NetCleanArchMvc.Application.csproj
+++ b/NetCleanArchMvc.Application/NetCleanArchMvc.Application.csproj
@@ -4,6 +4,15 @@
     <ProjectReference Include="..\NetCleanArchMvc.Domain\NetCleanArchMvc.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="16.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="Mappings\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
