feat: Implementando o serviço para Category - CategoryService

--- a/NetCleanArchMvc.Application/NetCleanArchMvc.Application.csproj
+++ b/NetCleanArchMvc.Application/NetCleanArchMvc.Application.csproj
@@ -10,7 +10,9 @@
 
   <ItemGroup>
     <Folder Include="DTOs\" />
+    <Folder Include="Interfaces\" />
     <Folder Include="Mappings\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
   <PropertyGroup>
