feat: Teste - Registrando os serviços e criando o Controller e View para Category

--- a/NetCleanArchMvc.WebUI/NetCleanArchMvc.WebUI.csproj
+++ b/NetCleanArchMvc.WebUI/NetCleanArchMvc.WebUI.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\NetCleanArchMvc.Infra.IoC\NetCleanArchMvc.Infra.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
