--- a/NetCleanArchMvc.Application/NetCleanArchMvc.Application.csproj
+++ b/NetCleanArchMvc.Application/NetCleanArchMvc.Application.csproj
@@ -6,12 +6,17 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="16.0.0" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="DTOs\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Mappings\" />
+    <Folder Include="Products\" />
+    <Folder Include="Products\Commands\" />
+    <Folder Include="Products\Handlers\" />
+    <Folder Include="Products\Queries\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
